# CropPilot

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/agents/: __init__.py  analytics_agent.py  disease_agent.py  farm_planner_agent.py  finance_agent.py  graph.py  market_agent.py  notification_agent.py  scheme_agent.py  tools.py  weather_agent.py
backend/api/: router.py
backend/api/v1/: router.py
backend/core/: __init__.py  config.py  dependencies.py  security.py
backend/db/: base.py  session.py
backend/db/versions/: 0001_initial_schema.py  env.py
backend/middleware/: __init__.py  logging.py  metrics.py  structured_logging.py
backend/models/: __init__.py  analytics.py  audit.py  disease.py  farm.py  market.py  notification.py  plot.py  scheme.py  user.py  weather.py
backend/rag/: __init__.py  ingestion.py  pipeline.py
backend/repositories/: __init__.py  base.py  disease.py  farm.py  market.py  notification.py  plot.py  scheme.py  user.py  weather.py
backend/schemas/: __init__.py  ai.py  auth.py  disease.py  farm.py  market.py  plot.py  scheme.py  user.py  weather.py
backend/scripts/: seed_data.py
backend/services/: __init__.py  auth.py  disease.py  disease_detection.py  farm.py  market.py  notification.py  plot.py  rag_chat.py  scheme.py  user.py  weather.py
backend/telemetry/: __init__.py  baggage.py  otel.py
backend/tests/: conftest.py  test_api.py  test_services.py
backend/workers/: __init__.py  celery_app.py  tasks.py
frontend/: .env.example  (+5 more)
(+137 files in other folders)
